Fixed text overflow

--- a/VIT-IEEE-CS-web-dev/task-4/index.css
+++ b/VIT-IEEE-CS-web-dev/task-4/index.css
@@ -23,7 +23,7 @@ body {
 }
 
 .custom-col {
-    height: 22rem;
+    height: 29rem;
 }
 
 .ionIcon {
